web scraping notebook added

--- a/wuzzuf_web_scraping.ipynb
+++ b/wuzzuf_web_scraping.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "87968533",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,8 @@
     "# print(searchBox)\n",
     "searchBox.clear()\n",
     "# type engineering inside the search box \n",
-    "searchBox.send_keys(\"Senior Facilities Engineer\")\n",
+    "# searchBox.send_keys(\"Senior Facilities Engineer\")\n",
+    "searchBox.send_keys(\"engineering\")\n",
     "time.sleep(2)\n",
     "# press enter to submit the search\n",
     "searchBox.send_keys(Keys.ENTER)\n",
